EARTH-28: Add dependency to twig_tweak and fix the slogan alignment in the footer.

--- a/css/components/components.css
+++ b/css/components/components.css
@@ -744,6 +744,18 @@
     #footer__global-footer #global-footer__info {
       margin-left: 16.9230769231em; } }
 
+@media only screen and (min-width: 768px) {
+  .contact-footer .block--lockup__site-slogan {
+    margin: 0 0 0 2px; } }
+
+@media only screen and (min-width: 860px) {
+  .contact-footer .block--lockup__site-slogan {
+    margin: 0 0 0 2px; } }
+
+@media only screen and (min-width: 1024px) {
+  .contact-footer .block--lockup__site-slogan {
+    margin: 0 0 0 2px; } }
+
 #header {
   background: rgba(0, 0, 0, 0.5);
   position: relative; }
